apps/qdrant/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qdrant-ingress
  namespace: qdrant
  labels:
    app: qdrant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qdrant.oisd.dev`)
      kind: Rule
      services:
        - name: qdrant
          port: 6333
      middlewares:
        - name: default-chain
          namespace: traefik
  tls:
    secretName: wildcard-tls-oisd
